First two randomized test cases